--- a/hw1/package.json
+++ b/hw1/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node --env-file=.env index.js",
-        "lint": "eslint src",
-        "lint:fix": "eslint src --fix"
+        "lint": "node_modules/.bin/eslint src",
+        "lint:fix": "node_modules/.bin/eslint src --fix"
     },
     "keywords": [],
     "author": "",
