--- a/hw5/package.json
+++ b/hw5/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "hw5",
-    "version": "0.0.1",
+    "name": "tea-tracker",
+    "version": "1.0.0",
     "description": "",
     "author": "",
-    "private": true,
-    "license": "UNLICENSED",
+    "license": "ISC",
     "scripts": {
         "build": "nest build",
         "start": "nest start",
@@ -28,7 +27,8 @@
         "class-validator": "^0.14.2",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "zod": "^3.25.67"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
