--- a/hw5/package.json
+++ b/hw5/package.json
@@ -5,26 +5,32 @@
     "author": "",
     "license": "ISC",
     "scripts": {
-        "build": "nest build",
+        "build": "nest build && node build.mjs",
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
+        "start:prod": "node build/server.mjs",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "docker:build": "docker build -f ./multi.Dockerfile -t tea-api:latest .",
+        "docker:run": "docker run -p 3000:3000 tea-api",
+        "docker:clean": "docker ps -a -q --filter ancestor=tea-api | xargs -r docker rm -f && docker rmi -f tea-api"
     },
     "dependencies": {
+        "@anatine/zod-nestjs": "^2.0.12",
         "@nestjs/common": "^11.0.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.0.1",
         "@nestjs/swagger": "^11.2.0",
+        "@nestjs/throttler": "^6.4.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
+        "http-terminator": "^3.2.0",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "swagger-ui-express": "^5.0.1",
@@ -42,6 +48,7 @@
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
         "@types/supertest": "^6.0.2",
+        "esbuild": "^0.25.5",
         "eslint": "^9.18.0",
         "globals": "^16.0.0",
         "jest": "^29.7.0",
