--- a/hw6/package.json
+++ b/hw6/package.json
@@ -20,6 +20,7 @@
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "dotenv": "^17.2.0",
         "express": "^5.1.0",
         "reflect-metadata": "^0.2.2",
         "zod": "^4.0.5"
