--- a/hw9/client/package.json
+++ b/hw9/client/package.json
@@ -2,7 +2,7 @@
     "name": "client",
     "private": true,
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --host",
         "build": "vite build",
         "preview": "vite preview"
     },
