--- a/hw9/docker-compose.prod.yml
+++ b/hw9/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
   server:
     build:
       context: ./server
-      target: dev
+      target: prod
     environment:
       - REDIS_URL=redis://redis:6379
       - PORT=3000
