--- a/hw9/load-balancer/nginx.conf
+++ b/hw9/load-balancer/nginx.conf
@@ -2,7 +2,7 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-  resolver 127.0.0.11 valid=10s;      # Docker‑DNS
+  resolver 127.0.0.11 valid=10s;
 
   map $http_upgrade $connection_upgrade {
     default   upgrade;
@@ -12,26 +12,37 @@ http {
   server {
     listen 80;
 
-    set $backend "server:3000";
+    # Vite HMR WebSocket
+    location /@vite/client {
+      proxy_pass http://client:5173;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header Host $host;
+    }
 
-    # WebSocket
+    # App WebSocket
     location /ws {
-      proxy_pass http://$backend$request_uri;
+      proxy_pass http://server:3000$request_uri;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # REST API
+    # REST API
     location /api/ {
-      proxy_pass http://$backend;
+      proxy_pass http://server:3000;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # статика React‑клиента
+    # Client app
     location / {
-      proxy_pass http://client;
+      proxy_pass http://client:5173;
+      proxy_set_header Host $host;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
     }
   }
 }
